# brujula-laboral

./: .env.example  .gitignore  AGENTS.md  Analisis_Asistente_Laboral_Sindical_AWS_Bedrock.docx  README.md  TASKS.md  pyproject.toml
.agents/skills/start-next-task/: SKILL.md
.codex/: config.toml
backend/: README.md
backend/app/: __init__.py  main.py
backend/app/ai/: bedrock_client.py  mock_bedrock.py  ollama_client.py
backend/app/api/: routes.py
backend/app/cli/: evaluate_models.py  ingest_corpus.py
backend/app/core/: config.py
backend/app/documents/: __init__.py  extraction.py  temporary_context.py  (+1 more)
backend/tests/: test_ask.py  test_bedrock_client.py  test_documents.py  test_health.py  test_local_temporary_storage.py  test_ollama_client.py  test_privacy_logging.py  test_rag_answering.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_loader.py  test_rag_metadata.py  test_rag_retrieval.py  test_s3_temporary_storage.py  test_static_web.py
corpus/: README.md  sources.example.json
corpus/markdown/: boe-estatuto-trabajadores.md  boe-ley-trabajo-distancia.md  convenio-comercio-barcelona-pendiente.md  mitrabajo-guia-registro-jornada.md
docs/: analisis-inicial.md  architecture.md  aws-setup.md  cierre-pruebas-intensivas.md  desarrollo-local.md  documentos-privados.md  evidencia-pruebas-locales.md  evidencia-pruebas-web.md  modelos-bedrock.md  plan-pruebas-intensivas.md  privacy.md  rag.md  web-placeholder.md
evals/: README.md  questions.seed.jsonl
scripts/: check.ps1  dev.ps1  format.ps1  lint.ps1  test.ps1
web/: app.js  index.html  styles.css
(+14 files in other folders)
