[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brujula-laboral"
version = "0.1.0"
description = "Asistente laboral y sindical con RAG propio y AWS Bedrock."
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.115",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.32"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7"
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
